# software-dev-crew

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  README.zh.md  pyproject.toml
src/software_dev_crew/: crew.py  main.py
src/software_dev_crew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/software_dev_crew/config/: agents.yaml  tasks.yaml
weather_app/: main.py
